--- a/Homework1/Tarea1.html
+++ b/Homework1/Tarea1.html
@@ -8,7 +8,7 @@
         <link rel   ="stylesheet" href="Tarea1.css" />
     </head>
         <body>
-            <h1>commit -a test</h1>
+            <h1>commit -a test 2</h1>
             <section>
             <header>
                 <article id="navegation">
